Added jacoco plugin to maven build and added test to meet a coverage of 80% on branches and lines.

--- a/src/test/resources/changelog/add-column.yml
+++ b/src/test/resources/changelog/add-column.yml
@@ -18,4 +18,5 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     primaryKey: true
+                    unique: true
 
