Fixed id for changeset in rename-column.yml test resource

--- a/src/test/resources/changelog/rename-column.yml
+++ b/src/test/resources/changelog/rename-column.yml
@@ -3,7 +3,7 @@ databaseChangeLog:
       file: create-table.yml
       relativeToChangelogFile: true
   - changeSet:
-      id: drop-column-single-test
+      id: rename-column-test
       author: liquigraph-test
       changes:
         - renameColumn:
